# cramer

./: .clang-tidy  .codedev.yml  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  README.md  annotated.html  classcramer_1_1Matrix-members.html  classcramer_1_1Matrix.html  classcramer_1_1Vector-members.html  classcramer_1_1Vector.html  classes.html  cramer_8hpp.html  cramer_8hpp_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  hierarchy.html  index.html  matrix_8cpp.html  matrix_8hpp.html  matrix_8hpp_source.html  menudata.js  namespacecramer.html  namespaces.html  structcramer_1_1is__complex.html  structcramer_1_1is__complex_3_01std_1_1complex_3_01T_01_4_01_4.html  vector_8cpp.html  vector_8hpp.html  vector_8hpp_source.html
.github/: FUNDING.yml
.github/workflows/: benchmark.yml  build.yml  ci.yml  codecov.yml  document.yml  test.yml
benchmarks/: benchmark_main.cpp  benchmark_matrix.cpp  benchmark_vector.cpp
docs/: matrix.md  vector.md
include/: cramer.h  cramer.hpp  matrix.h  matrix.hpp  vector.h  vector.hpp
scripts/: build.sh  format.sh  install_hooks.sh  lint.sh  test.sh  validate.sh
search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  functions_f.js  (+6 more)
src/: matrix.cpp  vector.cpp
tests/: CMakeLists.txt  test_matrix.cpp  test_vector.cpp
